--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "gulp-css-cache-bust",
-  "version": "0.0.2",
-  "description": "Rebuild html with htmlparser2.",
+  "version": "0.0.0",
+  "description": "Add query to CSS for cache buster.",
   "keywords": [
     "gulpplugin",
-    "htmlparser"
+    "cachebuster"
   ],
   "main": "lib/gulp-css-cache-bust.js",
   "scripts": {
@@ -25,7 +25,6 @@
   "dependencies": {
     "cloneextend": "0.0.3",
     "gulp-util": "^3.0.0",
-    "htmlparser2": "git://github.com/minodisk/htmlparser2.git#stack-storage",
     "through2": "^0.5.1"
   },
   "devDependencies": {
