--- a/package.json
+++ b/package.json
@@ -23,18 +23,18 @@
   },
   "homepage": "https://github.com/minodisk/gulp-css-cache-bust",
   "dependencies": {
-    "cloneextend": "0.0.3",
     "gulp-util": "^3.0.0",
+    "lodash": "^2.4.1",
     "through2": "^0.5.1"
   },
   "devDependencies": {
+    "chai": "^1.9.1",
     "coffee-script": "^1.7.1",
     "coveralls": "^2.11.1",
     "event-stream": "^3.1.7",
-    "expect": "^0.1.1",
     "gulp": "^3.8.6",
     "gulp-coffee": "^2.1.1",
-    "gulp-mocha": "^0.5.2",
+    "gulp-mocha": "^1.0.0",
     "gulp-replace": "^0.4.0",
     "gulp-watch": "^0.6.9",
     "istanbul": "^0.3.0",
